# multi-agent

./: .gitignore  README.md
backend/: README.md  config.py  main.py  middleware_source.py  pyproject.toml  test.py
backend/middleware/: history.py  logging.py
frontend/: README.md  index.html
frontend/src/: App.css  App.tsx  index.css
mcp_server/: README.md  main.py  pyproject.toml
