[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]
